force-app/main/default/objects/Placement_Drive__c/Placement_Drive__c.object-meta.xml
<CustomObject>
    <label>Placement Drive</label>
    <nameField>
        <label>Drive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>