force-app/main/default/objects/Placement_Drive__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Placement Drives</relationshipLabel>
    <relationshipName>Placement_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>