force-app/main/default/objects/Placement_Drive__c/fields/Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date__c</fullName>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>